# matrix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: nightly-release.yml  stable-release.yml
cmake/: CEdevToolchain.cmake  matrix_features.cmake
core/include/matrix_core/: arena.hpp  config.hpp  det_detail.hpp  error.hpp  explanation.hpp  latex.hpp  matrix.hpp  matrix_core.hpp  ops.hpp  rational.hpp  row_ops.hpp  row_reduction.hpp  slab.hpp  spaces.hpp  writer.hpp
core/src/: det_detail.cpp  explanation.cpp  latex_view.cpp  matrix_view.cpp  ops_basic_view.cpp  ops_cofactor_element_ondemand.cpp  ops_cramer.cpp  ops_det_ondemand.cpp  ops_det_replace_column_ondemand.cpp  ops_inverse_ondemand.cpp  ops_minor_matrix.cpp  ops_optional_stubs.cpp  ops_rref_ondemand.cpp  ops_vector_ondemand.cpp  rational.cpp  row_ops.cpp  row_reduction.cpp  spaces.cpp
core/tests/: test_arena_guards.cpp  test_cofactor_element.cpp  test_cramer.cpp  test_dbg_ce.hpp  test_det.cpp  test_inverse.cpp  test_matrix_ops.cpp  test_minor_matrix.cpp  test_rational.cpp  test_rref.cpp  test_spaces.cpp  test_vectors.cpp
core/tests_ce/: ce_test_runtime.cpp  test_cofactor_element_ce.cpp  test_cramer_ce.cpp  test_det_ce.cpp  test_inverse_ce.cpp  test_matrix_ops_ce.cpp  test_minor_matrix_ce.cpp  test_rational_ce.cpp  test_rref_ce.cpp  test_spaces_ce.cpp  test_vectors_ce.cpp
shell/include/matrix_shell/: app.hpp  config.hpp  input.hpp  text.hpp  text_catalog.inc  ui.hpp
shell/include/matrix_shell/detail/: app_internal.hpp
shell/src/: app.cpp  app_internal.cpp  input.cpp  main_ce.cpp  page.cpp  text.cpp
shell/src/pages/: cofactor.cpp  confirm.cpp  dim.cpp  editor.cpp  menu.cpp  result.cpp  slot_pick.cpp  steps.cpp
tools/: setup_clangd.py
tools/clangd/: ce_shim.hpp
